test/expected/explain_enw3-c.out
explain enum E x : 3
        ^
9: error: enum bit-fields not supported in C
